# xtce-lib

./: .xsdata.xml  LICENSE  README.md  pyproject.toml
scripts/: generate_models.py  generate_models_init.py
src/xtce_lib/: __init__.py  exceptions.py  xtce_path.py
src/xtce_lib/common/: __init__.py  validation.py  xtce_database.py  xtce_file.py  xtce_path.py  xtce_registry.py  xtce_version.py
src/xtce_lib/models/: __init__.py  _base.py  alarm.py  alarms.py  arguments.py  array.py  codec.py  command.py  commands.py  common.py  container.py  containers.py  datatype.py  datatypes.py  enum.py  enums.py  match.py  misc.py  parameter.py  parameters.py  processing.py  range.py  reference.py  references.py  space_system.py  stream.py  telemetry.py  time.py  verifier.py
src/xtce_lib/xsd/: dtc-25-02-18.xsd
src/xtce_lib/xtce/: __init__.py  _base.py  _pattern.py  _template.py  _type_aliases.py  _util.py  alarm.py  algorithm.py  argument.py  array.py  calibrator.py  codec.py  command.py  common.py  condition.py  container.py  datatype.py  enum.py  misc.py  parameter.py  range.py  reference.py  space_system.py  stream.py  telemetry.py  time.py  trigger.py  verifier.py
tests/: test_imports.py  test_validation.py  test_xtce_path.py  test_xtce_registry.py
tests/test_models/: test_common.py  test_range.py  test_reference.py
